crates/lattice-placement/tests/ui/raw_etcd_transport.rs
use lattice_placement::storage::etcd::client::EtcdKv;

fn main() {}
